BroadleafCommerce/QA#2324 - Fixed spacing on traditional listgrid views

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/listGrid.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/listGrid.css
@@ -129,7 +129,6 @@
 }
 .table tbody>tr>td .column-text {
     display: inline-block;
-    max-width: 260px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
